Fix calibration sequence

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,5 +1,4 @@
-linear_odometry_topic: "/odometry/linear"
-angular_odometry_topic: "/odometry/angular"
+odometry_topic: "/odometry"
 calibration_topic: "/calibrate_odom"
 wheel_radius: 0.08               # [m]
 wheel_dist: 0.43                 # [m]
